--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="container1"> <!-- Compoe apenas a apresentação; Margin centraliza o conteiner horizontalmente-->
-    <header>
-        <h1> Olá, amigos! Sejam bem vindos ao meu <b>PRIMEIRO</b> site. </h1>
-        <h2> Meu objetivo é iniciar com ele a montagem do meu portifólio de desenvolvedora frontEnd Jr. </h2>
-    </header>  <!--Elementos h, p, etc -->
+        <header>
+            <h1> Olá, amigos! Sejam bem vindos ao meu <b>PRIMEIRO</b> site. </h1>
+            <h2> Meu objetivo é iniciar com ele a montagem do meu portifólio de desenvolvedora frontEnd Jr. </h2>
+        </header>  <!--Elementos h, p, etc -->
     </div>
 
     <div class="container2">
@@ -26,15 +26,14 @@
         <img src="https://media.licdn.com/dms/image/v2/D4D03AQFLt5DhonE4cw/profile-displayphoto-shrink_800_800/B4DZW_xVkeGkAk-/0/1742679137387?e=1747872000&v=beta&t=kuDzVGhQ4SBjNMG8gt0sqKvV2DyzwI5XPXz7D16obH8"> <!-- img tag para adicionar imagem, scr atributo para anexar imagem -->
     </div>
 
-    
-    <div>
+    <div class="Fim">
         <h3>
-        Você pode saber mais sobre mim visitando o
-        <a href="https://www.linkedin.com/in/edlanasn/" target="_blank"> Meu In </a>
-        <!-- a é tag de link, href atributo que direciona o link chamado com a tag a; Atributo target="_blank" especifica que o link deve abrir em outro browser/ outra guia -->
+            Você pode saber mais sobre mim visitando o
+            <a href="https://www.linkedin.com/in/edlanasn/" target="_blank"> Meu In </a>
+            <!-- a é tag de link, href atributo que direciona o link chamado com a tag a; Atributo target="_blank" especifica que o link deve abrir em outro browser/ outra guia -->
         </h3>
     </div>
-
+    
     <div class="container3">
         <footer>
             <p> &copy; 2025 Desenvolvimento inicial de Edlana Nascimento. Todos os direitos reservados.</p>
